--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,8 @@
     crossorigin="anonymous">
   <script defer src="https://use.fontawesome.com/releases/v5.4.1/js/all.js" integrity="sha384-L469/ELG4Bg9sDQbl0hvjMq8pOcqFgkSpwhwnslzvVVGpDjYJ6wJJyYjvG3u8XW7"
     crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/ionicons@4.4.6/dist/ionicons.js"></script>
+
   <title>LonaLee App</title>
 </head>
 
